- Updated mp4v2 x86 and x64 to 4.0.1 Visual C++ 2017 custom builds. - Updated ImageMagick to 7.0.8.11 with HDRI support. - Updated pingo to 0.98.9 x64 version. - Updated ffmpeg to 4.0.2.
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1369 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Source/mp4v2/GNUmakefile
+++ b/FileOptimizer/Source/mp4v2/GNUmakefile
@@ -34,8 +34,8 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
-build_triplet = i386-apple-darwin11.4.2
-host_triplet = i386-apple-darwin11.4.2
+build_triplet = i386-apple-darwin14.5.0
+host_triplet = i386-apple-darwin14.5.0
 bin_PROGRAMS = $(am__EXEEXT_1)
 check_PROGRAMS =
 am__append_1 = \
@@ -314,12 +314,12 @@ GZIP_ENV = --best
 DIST_ARCHIVES = $(distdir).tar.bz2 $(distdir).zip
 distuninstallcheck_listfiles = find . -type f -print
 distcleancheck_listfiles = find . -type f -print
-ACLOCAL = ${SHELL} /Users/dac149/Projects/3rdParty/mp4v2/trunk/autoaux/missing --run aclocal-1.11
-AMTAR = ${SHELL} /Users/dac149/Projects/3rdParty/mp4v2/trunk/autoaux/missing --run tar
+ACLOCAL = ${SHELL} /Users/stephenwagner/code/Camtasia-Mac/mp4v2/autoaux/missing --run aclocal-1.11
+AMTAR = ${SHELL} /Users/stephenwagner/code/Camtasia-Mac/mp4v2/autoaux/missing --run tar
 AR = ar
-AUTOCONF = ${SHELL} /Users/dac149/Projects/3rdParty/mp4v2/trunk/autoaux/missing --run autoconf
-AUTOHEADER = ${SHELL} /Users/dac149/Projects/3rdParty/mp4v2/trunk/autoaux/missing --run autoheader
-AUTOMAKE = ${SHELL} /Users/dac149/Projects/3rdParty/mp4v2/trunk/autoaux/missing --run automake-1.11
+AUTOCONF = ${SHELL} /Users/stephenwagner/code/Camtasia-Mac/mp4v2/autoaux/missing --run autoconf
+AUTOHEADER = ${SHELL} /Users/stephenwagner/code/Camtasia-Mac/mp4v2/autoaux/missing --run autoheader
+AUTOMAKE = ${SHELL} /Users/stephenwagner/code/Camtasia-Mac/mp4v2/autoaux/missing --run automake-1.11
 AWK = awk
 CC = gcc
 CCDEPMODE = depmode=none
@@ -348,7 +348,7 @@ INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_PROGRAM = ${INSTALL}
 INSTALL_SCRIPT = ${INSTALL}
 INSTALL_STRIP_PROGRAM = $(install_sh) -c -s
-LD = /usr/llvm-gcc-4.2/libexec/gcc/i686-apple-darwin11/4.2.1/ld
+LD = /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/ld
 LDFLAGS = 
 LIBOBJS = 
 LIBS := $(LIBS) $(X_MINGW_LIBS)
@@ -356,9 +356,9 @@ LIBTOOL = $(SHELL) $(top_builddir)/libtool
 LIPO = lipo
 LN_S = ln -s
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /Users/dac149/Projects/3rdParty/mp4v2/trunk/autoaux/missing --run makeinfo
+MAKEINFO = ${SHELL} /Users/stephenwagner/code/Camtasia-Mac/mp4v2/autoaux/missing --run makeinfo
 MKDIR_P = autoaux/install-sh -c -d
-NM = /opt/local/bin/nm
+NM = /usr/bin/nm
 NMEDIT = nmedit
 OBJDUMP = false
 OBJEXT = o
@@ -373,7 +373,7 @@ PACKAGE_URL =
 PACKAGE_VERSION = 2.0.0
 PATH_SEPARATOR = :
 PROJECT_bugreport = <kidjan@gmail.com>
-PROJECT_build = Mon Jan 21 10:15:40 EST 2013
+PROJECT_build = Sun Sep 25 16:09:30 EDT 2016
 PROJECT_irc = irc://irc.freenode.net/handbrake
 PROJECT_name = MP4v2
 PROJECT_name_formal = MP4v2 2.0.0
@@ -400,7 +400,7 @@ SET_MAKE =
 SHELL = /bin/sh
 STRIP = strip
 VERSION = 2.0.0
-X_CXX_ARCH =   -arch i386
+X_CXX_ARCH = 
 X_CXX_D = 
 X_CXX_I = 
 X_CXX_W = 
@@ -412,10 +412,10 @@ X_GCH_STATIC = 1
 X_GCH_STATIC_FLAGS = 
 X_MINGW_LIBS = 
 X_libmp4v2_la_LDFLAGS = -Wl,-current_version,$(PROJECT_version_major).$(PROJECT_version_minor).$(PROJECT_version_point) -Wl,-compatibility_version,$(PROJECT_version_major).0.0
-abs_builddir = /Users/dac149/Projects/3rdParty/mp4v2/trunk
-abs_srcdir = /Users/dac149/Projects/3rdParty/mp4v2/trunk
-abs_top_builddir = /Users/dac149/Projects/3rdParty/mp4v2/trunk
-abs_top_srcdir = /Users/dac149/Projects/3rdParty/mp4v2/trunk
+abs_builddir = /Users/stephenwagner/code/Camtasia-Mac/mp4v2
+abs_srcdir = /Users/stephenwagner/code/Camtasia-Mac/mp4v2
+abs_top_builddir = /Users/stephenwagner/code/Camtasia-Mac/mp4v2
+abs_top_srcdir = /Users/stephenwagner/code/Camtasia-Mac/mp4v2
 ac_ct_CC = gcc
 ac_ct_CXX = g++
 ac_ct_DUMPBIN = 
@@ -425,10 +425,10 @@ am__quote =
 am__tar = ${AMTAR} chof - "$$tardir"
 am__untar = ${AMTAR} xf -
 bindir = ${exec_prefix}/bin
-build = i386-apple-darwin11.4.2
+build = i386-apple-darwin14.5.0
 build_alias = 
 build_cpu = i386
-build_os = darwin11.4.2
+build_os = darwin14.5.0
 build_vendor = apple
 builddir = .
 datadir = ${datarootdir}
@@ -436,15 +436,15 @@ datarootdir = ${prefix}/share
 docdir = ${datarootdir}/doc/${PACKAGE_TARNAME}
 dvidir = ${docdir}
 exec_prefix = ${prefix}
-host = i386-apple-darwin11.4.2
+host = i386-apple-darwin14.5.0
 host_alias = 
 host_cpu = i386
-host_os = darwin11.4.2
+host_os = darwin14.5.0
 host_vendor = apple
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /Users/dac149/Projects/3rdParty/mp4v2/trunk/autoaux/install-sh
+install_sh = ${SHELL} /Users/stephenwagner/code/Camtasia-Mac/mp4v2/autoaux/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
